# u3oko

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  change-encoding.py  clang-format.sh  clang-tidy.sh  doxygen  license  readme.md  uuu_projects_vs2017.sln
appls/: CMakeLists.txt  includes_int.hpp
appls/u3oko/_make/: CMakeLists.txt
appls/u3oko/_make/vs2017/: u3oko.vcxproj  u3oko.vcxproj.filters
defines/: boost_includes.hpp  define-check-mem.hpp  defines.hpp  defines_aligned_mem.hpp  defines_boost.hpp  defines_check_state.hpp  defines_class_ptrs.hpp  defines_compile.hpp  (+25 more)
dlls/base_id/_make/: CMakeLists.txt
dlls/base_id/_make/vs2017/: base_id.vcxproj  base_id.vcxproj.filters
dlls/codecs/vcodec_gen/: CMakeLists.txt
dlls/codecs/vcodec_gen/source/: codec-impl-info.hpp  dll-generic-codec-functs.hpp  filter-dll.cpp  filter-dll.hpp  includes.hpp  includes_int.hpp  info-filter-dll.cpp  info-filter-dll.hpp  main.cpp  syn_types.hpp  vals.hpp
dlls/codecs/vcodec_gen/source/browser/: codec-brower.cpp  codec-brower.hpp
dlls/codecs/vcodec_gen/source/helpers/: load_codec_funct.hpp
dlls/codecs/vcodec_gen/vs2017/: vcodec_gen.vcxproj  vcodec_gen.vcxproj.filters
dlls/convertors/all2hsl/: CMakeLists.txt
dlls/convertors/all2hsl/source/: filter-dll-alloc-functs.cpp  filter-dll-convert-rgb-funct.cpp  filter-dll-convert-y16-funct.cpp  filter-dll-convert-y8-funct.cpp  filter-dll-duplicate-functs.cpp  filter-dll-flip-y-funct.cpp  filter-dll-transform-functs.cpp  filter-dll.cpp  filter-dll.hpp  includes_int.hpp  info-filter-dll.cpp  info-filter-dll.hpp  main.cpp  syn.hpp  vals.hpp
dlls/convertors/all2hsl/vs2017/: all2hsl.vcxproj  all2hsl.vcxproj.filters
dlls/devents/_make/: CMakeLists.txt
dlls/devents/_make/vs2017/: devents.vcxproj  devents.vcxproj.filters
dlls/doptim/_make/: CMakeLists.txt
dlls/doptim/_make/vs2017/: doptim.vcxproj  doptim.vcxproj.filters
dlls/gens/vgen_conv3_11/: CMakeLists.txt
dlls/gens/vgen_conv3_11/source/: create_convolution_buff.cpp  filter-dll.cpp  filter-dll.hpp  includes_int.hpp  info-filter-dll.cpp  info-filter-dll.hpp  main.cpp  syn.hpp  transform_functs.cpp
dlls/gens/vgen_conv3_11/source/consts/: vals.hpp
dlls/gens/vgen_conv3_11/vs2017/: vgen_conv3_11.vcxproj  vgen_conv3_11.vcxproj.filters
dlls/gens/vgen_motion/: CMakeLists.txt
dlls/gens/vgen_motion/source/: filter-dll-moton-est-funct.cpp  filter-dll-transform-functs.cpp  filter-dll.cpp  filter-dll.hpp  includes_int.hpp  info-filter-dll.cpp  info-filter-dll.hpp  main.cpp  syn.hpp  vals.hpp
dlls/gens/vgen_motion/vs2017/: vgen_motion.vcxproj  vgen_motion.vcxproj.filters
dlls/mixers/mix_multiplier/: CMakeLists.txt
dlls/mixers/mix_multiplier/source/: filter-dll-transform-functs.cpp  filter-dll.cpp  filter-dll.hpp  includes_int.hpp  info-filter-dll.cpp  info-filter-dll.hpp  main.cpp  syn.hpp
dlls/mixers/mix_multiplier/vs2017/: mix_multiplier.vcxproj  mix_multiplier.vcxproj.filters
dlls/sources/fake_vgen/: CMakeLists.txt
dlls/sources/fake_vgen/source/: color_helpers_functs.hpp  includes_int.hpp  main.cpp  source-impl.cpp  source-impl.hpp  syn.hpp
dlls/sources/fake_vgen/vs2017/: fake_vgen.vcxproj  fake_vgen.vcxproj.filters
dlls/sources/gen_vgen/: CMakeLists.txt
dlls/sources/gen_vgen/source/: filter-dll-fill-buffer-functs.cpp  filter-dll-thread-funct.cpp  filter-dll.cpp  filter-dll.hpp  icapture-image-null-impl.hpp  includes_int.hpp  info-filter-dll.cpp  info-filter-dll.hpp  main.cpp  obj-source-impl-proxy.cpp  obj-source-impl-proxy.hpp  syn_types.hpp
dlls/sources/gen_vgen/source/consts/: vals.hpp
dlls/sources/gen_vgen/vs2017/: gen_vgen.vcxproj  gen_vgen.vcxproj.filters
dlls/sources/vgen_lib/: CMakeLists.txt
dlls/sources/vgen_lib/source/: includes.hpp  includes_int.hpp  isource-impl.cpp  isource-impl.hpp  source-info.hpp  syn.hpp  vals.hpp
dlls/sources/vgen_lib/vs2017/: vgen_lib.vcxproj  vgen_lib.vcxproj.filters
dlls/utils/vec2image/: CMakeLists.txt
dlls/utils/vec2image/source/: filter-dll-transform-functs.cpp  filter-dll-vec2buff-funct.cpp  filter-dll.cpp  filter-dll.hpp  includes_int.hpp  info-filter-dll.cpp  info-filter-dll.hpp  main.cpp  vals.hpp
dlls/utils/vec2image/vs2017/: vec2image.vcxproj  vec2image.vcxproj.filters
libs/core/_make/: CMakeLists.txt
libs/core/_make/vs2017/: core.vcxproj  core.vcxproj.filters
libs/events/_make/: CMakeLists.txt
libs/events/_make/vs2017/: events.vcxproj  events.vcxproj.filters
libs/helpers/_make/: CMakeLists.txt
libs/helpers/_make/vs2017/: helpers.vcxproj  helpers.vcxproj.filters
libs/icore/_make/: CMakeLists.txt
libs/icore/_make/vs2017/: icore.vcxproj  icore.vcxproj.filters
libs/ievents/_make/: CMakeLists.txt
libs/ievents/_make/vs2017/: ievents.vcxproj  ievents.vcxproj.filters
libs/ievents_events/_make/: CMakeLists.txt
libs/ievents_events/_make/vs2017/: ievents_events.vcxproj  ievents_events.vcxproj.filters
libs/ilink/_make/: CMakeLists.txt
libs/ilink/_make/vs2017/: ilink.vcxproj  ilink.vcxproj.filters
libs/imdata_events/_make/: CMakeLists.txt
libs/imdata_events/_make/vs2017/: imdata_events.vcxproj  imdata_events.vcxproj.filters
libs/iproperties/_make/: CMakeLists.txt
libs/iproperties/_make/vs2017/: iproperties.vcxproj  iproperties.vcxproj.filters
libs/link/_make/: CMakeLists.txt
libs/link/_make/vs2017/: link.vcxproj  link.vcxproj.filters
libs/properties/_make/: CMakeLists.txt
libs/properties/_make/vs2017/: properties.vcxproj  properties.vcxproj.filters
modules/uuu_appl/_make/: CMakeLists.txt
modules/uuu_appl/_make/vs2017/: uuu_appl.vcxproj  uuu_appl.vcxproj.filters
modules/uuu_events/_make/: CMakeLists.txt
modules/uuu_events/_make/vs2017/: uuu_events.vcxproj  uuu_events.vcxproj.filters
modules/uuu_log/_make/: CMakeLists.txt
modules/uuu_log/_make/vs2017/: uuu_log.vcxproj  uuu_log.vcxproj.filters
modules/uuu_mdata/_make/: CMakeLists.txt
modules/uuu_mdata/_make/vs2017/: mdata.vcxproj  mdata.vcxproj.filters
modules/uuu_storage/_make/: CMakeLists.txt
modules/uuu_storage/_make/vs2017/: uuu_storage.vcxproj  uuu_storage.vcxproj.filters
(+3753 files in other folders)
